--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^3.0.2",
-    "svelte": "^4.2.10",
+    "svelte": "^5.0.0-next.23",
     "vite": "^5.1.0"
   }
 }
