--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "dev": "vite",
+    "preview": "vite preview",
+    "test": "vitest"
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^3.0.2",
     "svelte": "^5.0.0-next.23",
-    "vite": "^5.1.0"
-  }
+    "vite": "^5.1.0",
+    "vitest": "^1.2.2"
+  },
+  "dependencies": {}
 }
